--- a/model/README
+++ b/model/README
@@ -3,3 +3,6 @@ copiar aqui tu modelo:
 group1-shard1of1.bin
 model.json
 copiar los dos archivos (bin y json) que te genera kaggle
+
+-> añadir nuestro modelo en la carpeta model
+-> añadir base de datos para cuando salga la prediccion se añada en la base de datos
